[gd_scene load_steps=3 format=3 uid="uid://b85v63p0wrmmg"]

[ext_resource type="Script" path="res://Scene/Game/_Script/game.gd" id="1_npcpy"]
[ext_resource type="PackedScene" uid="uid://cj1kns8r4alw1" path="res://Scene/Level/Variant/level.tscn" id="2_ksffh"]

[node name="Game" type="Node"]
process_priority = -1
script = ExtResource("1_npcpy")

[node name="ReactionViewportContainer" type="SubViewportContainer" parent="."]
custom_minimum_size = Vector2(640, 360)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SubViewport" type="SubViewport" parent="ReactionViewportContainer"]
transparent_bg = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
canvas_item_default_texture_filter = 0
size = Vector2i(640, 360)
render_target_update_mode = 4

[node name="EffectMapContainer" type="SubViewportContainer" parent="ReactionViewportContainer/SubViewport"]
custom_minimum_size = Vector2(1920, 1080)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReactionViewport" type="SubViewport" parent="ReactionViewportContainer/SubViewport/EffectMapContainer" groups=["reaction_viewport"]]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
canvas_item_default_texture_filter = 0
canvas_cull_mask = 4294967038
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="ReactionViewportContainer/SubViewport"]

[node name="SurfaceViewportContainer" type="SubViewportContainer" parent="."]
custom_minimum_size = Vector2(640, 360)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="SurfaceViewportContainer"]
transparent_bg = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
canvas_item_default_texture_filter = 0
size = Vector2i(640, 360)
render_target_update_mode = 4

[node name="EffectMapContainer" type="SubViewportContainer" parent="SurfaceViewportContainer/SubViewport"]
physics_interpolation_mode = 0
custom_minimum_size = Vector2(1920, 1080)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2

[node name="EffectMapViewport" type="SubViewport" parent="SurfaceViewportContainer/SubViewport/EffectMapContainer" groups=["effect_viewport"]]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
canvas_item_default_texture_filter = 0
canvas_cull_mask = 4294966782
size = Vector2i(1920, 1080)
render_target_clear_mode = 1
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="SurfaceViewportContainer/SubViewport"]

[node name="LevelViewportContainer" type="SubViewportContainer" parent="."]
custom_minimum_size = Vector2(640, 360)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SubViewport" type="SubViewport" parent="LevelViewportContainer"]
handle_input_locally = false
snap_2d_transforms_to_pixel = true
canvas_item_default_texture_filter = 0
canvas_cull_mask = 4294966527
size = Vector2i(640, 360)
render_target_update_mode = 4

[node name="Level" parent="LevelViewportContainer/SubViewport" instance=ExtResource("2_ksffh")]
